@@ -26,5 +26,5 @@ extern Z80_OPTS z80_opts;
 enum
   {
     ACCUSE_A = 1,
-    ACCUSE_HL
+    ACCUSE_SCRATCH
   };
